--- a/Runnable/Languages/Filipino/v.xml
+++ b/Runnable/Languages/Filipino/v.xml
@@ -45,6 +45,21 @@
         <form name="DF Perfective" value="binigayan" />
       </forms>
     </stem>
+    <stem name="himasok" gloss="">
+      <comments />
+      <sentence />
+      <forms>
+        <form name="AF Contemplative" value="manghimasok" />
+        <form name="AF Imperfective" value="naghimasok" />
+        <form name="AF Perfective" value="nanghimasok" />
+        <form name="OF Contemplative" value="" />
+        <form name="OF Imperfective" value="" />
+        <form name="OF Perfective" value="" />
+        <form name="DF Contemplative" value="panghihimasukan" />
+        <form name="DF Imperfective" value="pinanghihimasukan" />
+        <form name="DF Perfective" value="pinanghimasukan" />
+      </forms>
+    </stem>
     <stem name="hiwa" gloss="to slice">
       <comments />
       <sentence />
