update lexicon for sample text

--- a/Runnable/Languages/Filipino/adp.xml
+++ b/Runnable/Languages/Filipino/adp.xml
@@ -2,6 +2,11 @@
   <features />
   <forms />
   <stems>
+    <stem name="at" gloss="at">
+      <comments />
+      <sentence />
+      <forms />
+    </stem>
     <stem name="bahagi ng katawan" gloss="body part">
       <comments />
       <sentence />
