--- a/Runnable/Languages/Filipino/adj.xml
+++ b/Runnable/Languages/Filipino/adj.xml
@@ -17,371 +17,14 @@
     <form>Superlative</form>
   </forms>
   <stems>
-    <stem name="1000" gloss="1000th">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="1000" />
-      </forms>
-    </stem>
-    <stem name="10th" gloss="10th">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="10th" />
-      </forms>
-    </stem>
-    <stem name="a lot of" gloss="a lot of">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="a lot of" />
-      </forms>
-    </stem>
-    <stem name="able" gloss="able">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="able" />
-      </forms>
-    </stem>
-    <stem name="about" gloss="about">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="about" />
-      </forms>
-    </stem>
-    <stem name="afraid" gloss="afraid">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="afraid" />
-      </forms>
-    </stem>
-    <stem name="all" gloss="all">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="all" />
-      </forms>
-    </stem>
-    <stem name="alone" gloss="alone">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="alone" />
-      </forms>
-    </stem>
-    <stem name="amazed" gloss="amazed">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="amazed" />
-      </forms>
-    </stem>
-    <stem name="another" gloss="another">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="another" />
-      </forms>
-    </stem>
-    <stem name="bad" gloss="bad">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="bad" />
-      </forms>
-    </stem>
-    <stem name="beautiful" gloss="beautiful">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="beautiful" />
-      </forms>
-    </stem>
-    <stem name="big" gloss="big">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="big" />
-      </forms>
-    </stem>
-    <stem name="blind" gloss="blind">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="blind" />
-      </forms>
-    </stem>
-    <stem name="blue" gloss="blue">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="blue" />
-      </forms>
-    </stem>
-    <stem name="both" gloss="both">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="both" />
-      </forms>
-    </stem>
-    <stem name="calm" gloss="calm">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="calm" />
-      </forms>
-    </stem>
-    <stem name="careful" gloss="careful">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="careful" />
-      </forms>
-    </stem>
-    <stem name="certain" gloss="certain">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="certain" />
-      </forms>
-    </stem>
-    <stem name="chief" gloss="chief">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="chief" />
-      </forms>
-    </stem>
-    <stem name="clean" gloss="clean">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="clean" />
-      </forms>
-    </stem>
-    <stem name="cruel" gloss="cruel">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="cruel" />
-      </forms>
-    </stem>
-    <stem name="dangerous" gloss="dangerous">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="dangerous" />
-      </forms>
-    </stem>
-    <stem name="deep" gloss="deep">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="deep" />
-      </forms>
-    </stem>
-    <stem name="dirty" gloss="dirty">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="dirty" />
-      </forms>
-    </stem>
-    <stem name="each" gloss="each">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="each" />
-      </forms>
-    </stem>
-    <stem name="enough" gloss="enough">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="enough" />
-      </forms>
-    </stem>
-    <stem name="evil" gloss="evil">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="evil" />
-      </forms>
-    </stem>
-    <stem name="extra" gloss="extra">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="extra" />
-      </forms>
-    </stem>
-    <stem name="extraordinary" gloss="extraordinary">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="extraordinary" />
-      </forms>
-    </stem>
-    <stem name="far" gloss="far">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="far" />
-      </forms>
-    </stem>
-    <stem name="fast" gloss="fast">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="fast" />
-      </forms>
-    </stem>
-    <stem name="female" gloss="female">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="female" />
-      </forms>
-    </stem>
-    <stem name="few" gloss="few">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="few" />
-      </forms>
-    </stem>
-    <stem name="first" gloss="first">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="first" />
-      </forms>
-    </stem>
-    <stem name="five" gloss="5">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="five" />
-      </forms>
-    </stem>
-    <stem name="fourth" gloss="fourth">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="fourth" />
-      </forms>
-    </stem>
-    <stem name="fresh" gloss="fresh">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="fresh" />
-      </forms>
-    </stem>
-    <stem name="furious" gloss="furious">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="furious" />
-      </forms>
-    </stem>
-    <stem name="handsome" gloss="handsome">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="handsome" />
-      </forms>
-    </stem>
-    <stem name="happy" gloss="happy">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="happy" />
-      </forms>
-    </stem>
-    <stem name="hard" gloss="hard">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="hard" />
-      </forms>
-    </stem>
-    <stem name="holy" gloss="holy">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="holy" />
-      </forms>
-    </stem>
-    <stem name="honest" gloss="hoenst">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="honest" />
-      </forms>
-    </stem>
-    <stem name="hot" gloss="hot">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="hot" />
-      </forms>
-    </stem>
-    <stem name="humble" gloss="humble">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="humble" />
-      </forms>
-    </stem>
-    <stem name="just" gloss="just">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="just" />
-      </forms>
-    </stem>
-    <stem name="kind" gloss="kind">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="kind" />
-      </forms>
-    </stem>
-    <stem name="left" gloss="left">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="left" />
-      </forms>
-    </stem>
-    <stem name="loud" gloss="loud">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="loud" />
-      </forms>
-    </stem>
     <stem name="malaki" gloss="big">
-      <comments />
+      <comments>Value 1</comments>
       <sentence />
       <features>
         <feature name="Sample Filipino Adjective Feature" value="pangalawang value" />
       </features>
       <forms>
         <form name="Superlative" value="pinakamalaki" />
-      </forms>
-    </stem>
-    <stem name="many" gloss="much-many">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="many" />
       </forms>
     </stem>
     <stem name="mapula" gloss="sore">
@@ -407,216 +50,6 @@
       <mappings>
         <mapping concept="happy" sense="A" pos="adj" />
       </mappings>
-    </stem>
-    <stem name="more" gloss="more">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="more" />
-      </forms>
-    </stem>
-    <stem name="old" gloss="old">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="old" />
-      </forms>
-    </stem>
-    <stem name="one" gloss="1">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="one" />
-      </forms>
-    </stem>
-    <stem name="one tenth" gloss=".1">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="one tenth" />
-      </forms>
-    </stem>
-    <stem name="only" gloss="only">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="only" />
-      </forms>
-    </stem>
-    <stem name="other" gloss="other">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="other" />
-      </forms>
-    </stem>
-    <stem name="seven" gloss="7">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="seven" />
-      </forms>
-    </stem>
-    <stem name="several" gloss="several">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="several" />
-      </forms>
-    </stem>
-    <stem name="shiny" gloss="shiny">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="shiny" />
-      </forms>
-    </stem>
-    <stem name="short" gloss="short">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="short" />
-      </forms>
-    </stem>
-    <stem name="six" gloss="6">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="six" />
-      </forms>
-    </stem>
-    <stem name="sleepy" gloss="sleepy">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="sleepy" />
-      </forms>
-    </stem>
-    <stem name="small" gloss="small">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="small" />
-      </forms>
-    </stem>
-    <stem name="smooth" gloss="smooth">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="smooth" />
-      </forms>
-    </stem>
-    <stem name="sore" gloss="sore">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="sore" />
-      </forms>
-    </stem>
-    <stem name="tall" gloss="tall">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="tall" />
-      </forms>
-    </stem>
-    <stem name="terrible" gloss="terrible">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="terrible" />
-      </forms>
-    </stem>
-    <stem name="twelve" gloss="12">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="twelve" />
-      </forms>
-    </stem>
-    <stem name="two" gloss="2">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="two" />
-      </forms>
-    </stem>
-    <stem name="valuable" gloss="valuable">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="valuable" />
-      </forms>
-    </stem>
-    <stem name="weak" gloss="weak">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="weak" />
-      </forms>
-    </stem>
-    <stem name="well" gloss="well">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="well" />
-      </forms>
-    </stem>
-    <stem name="western" gloss="western">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="western" />
-      </forms>
-    </stem>
-    <stem name="wide" gloss="wide">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="wide" />
-      </forms>
-    </stem>
-    <stem name="wild" gloss="wild">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="wild" />
-      </forms>
-    </stem>
-    <stem name="willing" gloss="willing">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="willing" />
-      </forms>
-    </stem>
-    <stem name="wise" gloss="wise">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="wise" />
-      </forms>
-    </stem>
-    <stem name="wonderful" gloss="wonderful">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="wonderful" />
-      </forms>
-    </stem>
-    <stem name="yellow" gloss="yellow">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="yellow" />
-      </forms>
-    </stem>
-    <stem name="young" gloss="young">
-      <comments />
-      <sentence />
-      <forms>
-        <form name="Superlative" value="young" />
-      </forms>
     </stem>
   </stems>
 </pos>
